fixed spacing issues with all_teams and coaches infor, also switch to tryouts over page

--- a/src/components/all_teams/all_teams.scss
+++ b/src/components/all_teams/all_teams.scss
@@ -2,7 +2,7 @@
 
 .all-teams {
   min-width: 100%;
-  height: 115vh;
+  height: auto;
   flex: 1 1 auto;
   display: block;
   justify-content: center;
